<resources>
    <string name="app_name">Notes</string>
    <string name="minor">minor</string>
    <string name="medium">medium</string>
    <string name="important">important"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">О программе:</string>
    <string name="headerNotes">Список заметок</string>
    <string name="nameNote">Название заметки</string>
    <string name="description">Описание</string>
    <string name="date_of_create">Дата создания</string>
    <string name="importantText">Важность</string>
    <string name="isDone">Сделано</string>
    <string name="btn_on">Записать</string>
    <string name="btn_cancel">Отмена</string>
    <string name="questionText">Данные не сохранены. Продолжить выход?</string>
    <string name="menu_about">О программе</string>
    <string name="menu_exit">Выход</string>
    <string name="about">О программе</string>
    <string name="exit">Выход</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>